<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/updating_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:persistent="false" android:title="@string/callind_multi_sim" android:key="button_call_independent_serv">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.msim.SelectSubscription" />
    </PreferenceScreen>
    <PreferenceCategory android:persistent="false" android:title="@string/other_settings" android:key="button_misc_category_key" />
    <PreferenceScreen android:title="@string/phone_account_settings" android:key="phone_account_settings_preference_screen">
        <intent android:targetPackage="com.android.phone" android:targetClass="com.android.phone.settings.PhoneAccountSettingsActivity" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry_key" android:summary="@string/auto_retry_mode_summary" />
    <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode_key" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title" android:key="button_hac_key" android:summary="@string/hac_mode_summary" />
    <ListPreference android:entries="@array/dtmf_tone_entries" android:title="@string/dtmf_tones_title" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary" android:entryValues="@array/dtmf_tone_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/enable_video_calling_title" android:key="button_enable_video_calling" android:defaultValue="true" />
    <PreferenceCategory android:persistent="false" android:title="@string/videocall_settings" android:key="button_videocall_settings_key" />
    <PreferenceScreen android:title="@string/vt_fallback_setting" android:key="videocall_setting_fb_key" android:summary="@string/vt_fallback_setting_sum">
        <intent android:targetPackage="com.borqs.videocall" android:action="android.intent.action.MAIN" android:targetClass="com.borqs.videocall.FallBackSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/vt_forward_setting" android:key="videocall_setting_fw_key" android:summary="@string/vt_forward_setting_sum">
        <intent android:targetPackage="com.borqs.videocall" android:action="android.intent.action.MAIN" android:targetClass="com.borqs.videocall.VTCallForwardOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/vt_imagereplace_setting" android:key="vt_imageplacer" android:summary="@string/vt_imagereplace_setting_sum">
        <intent android:targetPackage="com.borqs.videocall" android:action="android.intent.action.MAIN" android:targetClass="com.borqs.videocall.VTImageReplaceSetting" />
    </PreferenceScreen>
</PreferenceScreen>